# NeuroGraph

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
data/: drug_extended_24_state.json  drug_extended_25_state.json  kuo_bean_12_state.json
notebooks/: 01_initial_exploration.ipynb
src/neurograph/: __init__.py  ctbn.py  data.py  models.py  train.py  utils.py
tests/: test_models.py
