[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neurograph"
version = "0.0.1"
authors = [
  { name="Hannah Wimpy", email="hannah.wimpy@example.com" },
]
description = "A probabilistic GNN framework for modeling ion channel kinetics."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hannahwimpy/NeuroGraph"
"Bug Tracker" = "https://github.com/hannahwimpy/NeuroGraph/issues"
